syntax = "proto2";

package press.models;

message Theme {
    optional string uuid = 1;
    optional string name = 2;
    map<string, ThemeTemplate> templates = 10;
    map<string, ThemeAsset> assets = 11;
}

message ThemeTemplate {
    optional string uuid = 1;
    optional string name = 2;
    optional string theme = 3;
    optional string engine = 4 [default='html']; // can have custom engines
    // maybe an option for extensions?
    optional string data = 10;
}

message ThemeAsset {
    optional string uuid = 1;
    optional string name = 2;
    optional string theme = 3;
    optional string data = 10;
}